refactor(common): 优化事件消费与对象存储客户端实现
- 重构 AbstractEventConsumer，移除不再使用的EventSerializer，改为通过事件处理器列表处理事件
- 删除 AbstractEventMessageHandler 类及其相关实现，简化事件消费处理逻辑
- 修改 AbstractEventPublisher，抽象事件序列化部分由子类实现，去除对EventSerializer依赖
- 优化 AbstractOssClient，调整上传、下载、删除等方法签名，移除文件ID相关参数
- 重构 AbstractOssClient 中的文件元数据保存逻辑，去除文件ID参数，更新日志输出
- 迁移 AdapterListenerConfig 类到 start 模块并移除事件序列化器相关参数，简化事件监听器Bean创建
- 迁移 AdapterScheduleConfig 类到 start 模块，扩展事件重试调度器构造参数，支持虚拟线程池及配置属性解耦
- 迁移 AdapterWebConfig 类到适当包，去除不再手动注册的Converter Bean
- 新增 AppConfigure 配置类，统一管理应用层事务管理器及事务模板配置
- 更新 application.yaml 配置，新增 Kafka 中间件消费者配置，调整中间件相关配置布局
- 调整通知包结构，将 AbstractEmailService 和 AbstractSmsService 移出子包，放至common.notification包下